@@ -74,6 +74,7 @@ Trunk (unreleased changes)
                 daemon scripts
     HADOOP-2017 TestRegionServerAbort failure in patch build #903 and
                 nightly #266
+    HADOOP-2029 TestLogRolling fails too often in patch and nightlies
 
   IMPROVEMENTS
     HADOOP-1737 Make HColumnDescriptor data publically members settable
